trunk/Archive2/8b/60fff2efe76a9f/output
main.cpp: In member function 'void Derived<T>::foo()':
main.cpp:18:18: error: 'x' was not declared in this scope
     std::cout << x << '\n';
                  ^
